--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,67 +1,65 @@
 <html>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="./style.css" />
 
 <body>
     <h1>
         <%= title %>
-        <div class="db-container">
-            <% entries.forEach(function(entry) { %>
-            <div id="entry-container">
-                <div class="title">
-                    <%= entry.title %>
-                </div>
-                <div class="firstName">
-                    <%= entry.firstName %>
-                </div>
-                <div class="lastName">
-                    <%= entry.lastName %>
-                </div>
-                <div class="race">
-                    <%= entry.race %>
-                </div>
-                <div class="class">
-                    <%= entry.class %>
-                </div>
-                <div class="alignment">
-                    <%= entry.alignment %>
-                </div>
-                <div class="strength">
-                    <%= entry.strength %>
-                </div>
-                <div class="intelligence">
-                    <%= entry.intelligence %>
-                </div>
-                <div class="charisma">
-                    <%= entry.charisma %>
-                </div>
-                <div class="dexterity">
-                    <%= entry.dexterity %>
-                </div>
-                <div class="constitution">
-                    <%= entry.constitution %>
-                </div>
-                <div class="wisdom">
-                    <%= entry.wisdom %>
-                </div>
-                <div class="feats">
-                    <%= entry.feats %>
-                </div>
-                <div class="staticTraits">
-                    <%= entry.staticTraits %>
-                </div>
-                <div class="dynamicTraits">
-                    <%= entry.dynamicTraits %>
-                </div>
-                <div class="biography">
-                    <%= entry.biography %>
-                </div>
-                <div class="goals">
-                    <%= entry.goals %>
-                </div>
-            </div>
-            <% }) %>
-        </div>
     </h1>
+    <div class="db-container">
+        <% entries.forEach(function(entry) { %>
+        <% let url = "http://localhost:3000/entries/" + entry.id %>
+        <a class="title-noborder" href=<%=url %>>
+            <%= entry.title %></a>
+        <!-- <div class="firstName">
+                <%= entry.firstName %>
+            </div>
+            <div class="lastName">
+                <%= entry.lastName %>
+            </div>
+            <div class="race">
+                <%= entry.race %>
+            </div>
+            <div class="class">
+                <%= entry.class %>
+            </div>
+            <div class="alignment">
+                <%= entry.alignment %>
+            </div>
+            <div class="strength">
+                <%= entry.strength %>
+            </div>
+            <div class="intelligence">
+                <%= entry.intelligence %>
+            </div>
+            <div class="charisma">
+                <%= entry.charisma %>
+            </div>
+            <div class="dexterity">
+                <%= entry.dexterity %>
+            </div>
+            <div class="constitution">
+                <%= entry.constitution %>
+            </div>
+            <div class="wisdom">
+                <%= entry.wisdom %>
+            </div>
+            <div class="feats">
+                <%= entry.feats %>
+            </div>
+            <div class="staticTraits">
+                <%= entry.staticTraits %>
+            </div>
+            <div class="dynamicTraits">
+                <%= entry.dynamicTraits %>
+            </div>
+            <div class="biography">
+                <%= entry.biography %>
+            </div>
+            <div class="goals">
+                <%= entry.goals %>
+            </div> -->
+        <% }) %>
+    </div>
 </body>
 
 </html>
