--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,11 @@ h1 {
     padding: 0;
 }
 
+form {
+    width: 30%;
+    margin: auto;
+}
+
 .db-container {
     display: flex;
     flex-direction: column;
