--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -5,45 +5,47 @@
 </h1>
 
 <body>
-    <form method="POST" action="/add">
-        <label>Category</label>
-        <input type="text" name="category"><br>
-        <label>Title</label>
-        <input type="text" name="title"><br>
-        <label>First Name</label>
-        <input type="text" name="firstName"><br>
-        <label>Last Name</label>
-        <input type="text" name="lastName"><br>
-        <label>Race</label>
-        <input type="text" name=""><br>
-        <label>Class</label>
-        <input type="text" name="class"><br>
-        <label>Alignment</label>
-        <input type="text" name="alignment"><br>
-        <label>Strength</label>
-        <input type="number" name="strength"><br>
-        <label>Intelligence</label>
-        <input type="number" name="intelligence"><br>
-        <label>Charisma</label>
-        <input type="number" name="charisma"><br>
-        <label>Dexterity</label>
-        <input type="number" name="dexterity"><br>
-        <label>Constitution</label>
-        <input type="number" name="constitution"><br>
-        <label>Wisdom</label>
-        <input type="number" name="wisdom"><br>
-        <label>Feats</label>
-        <input type="text" name="feats"><br>
-        <label>Static Traits</label>
-        <input type="text" name="staticTraits"><br>
-        <label>Dynamic Traits</label>
-        <input type="text" name="dynamicTraits"><br>
-        <label>Biography</label>
-        <input type="text" name="biography"><br>
-        <label>Goals</label>
-        <input type="text" name="goals"><br><br>
-        <input type="submit" value="Create Entry">
-    </form>
+    <div class="form-container">
+        <form method="POST" action="/add">
+            <label>Category</label>
+            <input type="text" name="category"><br>
+            <label>Title</label>
+            <input type="text" name="title"><br>
+            <label>First Name</label>
+            <input type="text" name="firstName"><br>
+            <label>Last Name</label>
+            <input type="text" name="lastName"><br>
+            <label>Race</label>
+            <input type="text" name=""><br>
+            <label>Class</label>
+            <input type="text" name="class"><br>
+            <label>Alignment</label>
+            <input type="text" name="alignment"><br>
+            <label>Strength</label>
+            <input type="number" name="strength"><br>
+            <label>Intelligence</label>
+            <input type="number" name="intelligence"><br>
+            <label>Charisma</label>
+            <input type="number" name="charisma"><br>
+            <label>Dexterity</label>
+            <input type="number" name="dexterity"><br>
+            <label>Constitution</label>
+            <input type="number" name="constitution"><br>
+            <label>Wisdom</label>
+            <input type="number" name="wisdom"><br>
+            <label>Feats</label>
+            <input type="text" name="feats"><br>
+            <label>Static Traits</label>
+            <input type="text" name="staticTraits"><br>
+            <label>Dynamic Traits</label>
+            <input type="text" name="dynamicTraits"><br>
+            <label>Biography</label>
+            <input type="text" name="biography"><br>
+            <label>Goals</label>
+            <input type="text" name="goals"><br><br>
+            <input type="submit" value="Create Entry">
+        </form>
+    </div>
 </body>
 
 </html>
