--- a/views/individual.ejs
+++ b/views/individual.ejs
@@ -16,7 +16,7 @@
                 strength:
                 <%= entry.strength %><br>
                 intellect:
-                <%= entry.intellect %><br>
+                <%= entry.intelligence %><br>
                 charisma:
                 <%= entry.charisma %>
             </div>
