--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -1,11 +1,8 @@
 <html>
 <link rel="stylesheet" type="text/css" href="/style.css" />
-<h1>
-    <%= title %>
-</h1>
 
 <body>
-
+    <%- include('header') -%>
     <form method="POST" action="/add">
         <div class="form-container">
             <div class="form-column">
