--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,7 @@
 <link rel="stylesheet" type="text/css" href="./style.css" />
 
 <body>
-    <h1>
-        <%= title %>
-    </h1>
-    <div class="nav">
-        <a href="/">Home</a>
-        <a href="add">Add an Entry</a>
-        <a href="all">View all Entries</a>
-    </div>
+    <%- include('header') -%>
     <div class="db-container">
         <% entries.forEach(function(entry) { %>
         <% let url = "entries/" + entry.id %>
