--- a/views/individual.ejs
+++ b/views/individual.ejs
@@ -3,8 +3,7 @@
 
 
 <body>
-    <h1>The Compendium of Ghara
-    </h1>
+    <%- include('header') -%>
     <div class="individual-container">
         <div class="title-noborder">
             <%= entry.firstName %>
