--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -1,6 +1,6 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<h1>The Compendium of Ghara</h1>
+<%- include('header') %>
 
 <body>
 
