links were all messed up for a sec there

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,6 +3,6 @@
 </h1>
 <div class="nav">
     <a href="/">Home</a>
-    <a href="add">Add an Entry</a>
-    <a href="all">View all Entries</a>
+    <a href="/add">Add an Entry</a>
+    <a href="/all">View all Entries</a>
 </div>
