--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -1,9 +1,9 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<%- include('header') %>
+
 
 <body>
-
+    <%- include('header') -%>
 </body>
 
 </html>
