--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,7 @@ h1 {
 
 label {
     font-family: FantaisieArtistique;
+    color: green;
     font-size: 1em;
 }
 
@@ -57,6 +58,7 @@ input[type="number"] {
     font-size: 14px;
     margin-bottom: 5px;
     font-family: FantaisieArtistique;
+    color: green;
 }
 
 
