addpage label change

--- a/views/addpage.ejs
+++ b/views/addpage.ejs
@@ -8,7 +8,7 @@
             <div class="form-column">
                 <label>Category</label><br>
                 <input type="text" name="category"><br>
-                <label>Title</label><br>
+                <label>Title (Mandatory)</label><br>
                 <input type="text" name="title"><br>
                 <label>First Name</label><br>
                 <input type="text" name="firstName"><br>
