--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,7 @@ input[type="number"] {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: cornsilk;
 }
 
 .individual-container {
