added search page and dropdown

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,9 @@
-<h1>
+<h1 id="compendium">
     The Compendium of Ghara
 </h1>
 <div class="nav">
     <a href="/">Home</a>
     <a class="center" href="/add">Add an Entry</a>
+    <a href="/search">Entry Search</a>
     <a href="/all">View all Entries</a>
 </div>
