added type selection on add page

--- a/views/individual.ejs
+++ b/views/individual.ejs
@@ -9,6 +9,9 @@
             <%= entry.firstName %>
             <%= entry.lastName %>
         </div>
+        <div id="stat-container">
+            <%= entry.category %>
+        </div>
         <div class="title">Stats</div>
         <div class="stat-flex">
             <div id="stat-container">
