--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,19 @@ body {
     margin: auto;
 }
 
+.type-center {
+    background: cornsilk;
+    border-radius: 8px 8px 0 0;
+    margin: auto;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    width: 12%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 #compendium {
     display: flex;
     justify-content: center;
