--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,15 @@ body {
     border-radius: 8px 8px 0 0;
     margin: auto;
     margin-top: 10px;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     width: 12%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+.type-title {
+    text-align: center;
 }
 
 #compendium {
